--- a/public/index.html
+++ b/public/index.html
@@ -3,3 +3,9 @@
 <link rel="stylesheet" href="style.css">
 <title> Matrix Scribble! </title>
 <h1>Matrix Scribble</h1>
+<main>
+  <canvas id="mainCanvas">
+
+  </canvas>
+</main>
+<script src="main.js">
