--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <title> Matrix Scribble! </title>
 <h1>Matrix Scribble</h1>
 <main>
-  <canvas id="#mainCanvas">
+  <canvas id="mainCanvas">
 
   </canvas>
 </main>
